--- a/i18n/en.json
+++ b/i18n/en.json
@@ -6,7 +6,7 @@
     "vectorbeta-desc": "Typography refresh of the Vector skin using BetaFeatures",
     "vector-beta-feature-typography-description": "Updates typography of the Vector skin to improve readability, accessibility and consistency.",
     "vector-beta-feature-compact-personal-bar-message": "Compact personal bar",
-    "vector-beta-feature-compact-personal-bar-description": "Collapses personal bar into a flyout menu.",
+    "vector-beta-feature-compact-personal-bar-description": "Clean and organized access to Watchlist, Notifications, and Talk page. A simplified site header with access to tools when you need them.",
     "vector-beta-feature-fixedheader-message": "Fixed header",
     "vector-beta-feature-fixedheader-description": "Turns the header on the default Vector skin into a fixed header."
 }
