--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -6,5 +6,6 @@
 	"vector-beta-feature-compact-personal-bar-message": "Name shown in user preferences for Compact personal bar beta feature experiment.",
 	"vector-beta-feature-compact-personal-bar-description": "Brief explanation of Compact personal bar beta feature experiment.",
 	"vector-beta-feature-fixedheader-message": "Name shown in user preferences for Vector header beta feature experiment.",
-	"vector-beta-feature-fixedheader-description": "Brief explanation of Vector header beta feature experiment which makes the header fixed."
+	"vector-beta-feature-fixedheader-description": "Brief explanation of Vector header beta feature experiment which makes the header fixed.",
+	"vector-beta-compact-personal-bar-privacy": "Short label for privacy policy."
 }
