--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -11,5 +11,7 @@
 	"vector-beta-feature-compact-personal-bar-description": "Brief explanation of Compact personal bar beta feature experiment.",
 	"vector-beta-feature-fixedheader-message": "Name shown in user preferences for Vector header beta feature experiment.",
 	"vector-beta-feature-fixedheader-description": "Brief explanation of Vector header beta feature experiment which makes the header fixed.",
+	"vector-beta-feature-form-refresh-message": "Name shown in user preferences for Vector form refresh beta feature experiment.",
+	"vector-beta-feature-form-refresh-description": "Brief explanation of Vector form refresh beta feature experiment which makes forms consistent.",
 	"vector-beta-compact-personal-bar-privacy": "Short label for privacy policy.\n{{Identical|Privacy}}"
 }
