i18n: Use sentence case
Change-Id: Icf39fa1997bcce95f02c8ede5244d26cbb89e79e

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -9,7 +9,7 @@
     "vector-beta-feature-compact-personal-bar-description": "Clean and organized access to Watchlist, Notifications, and Talk page. A simplified site header with access to tools when you need them.",
     "vector-beta-feature-fixedheader-message": "Fixed header",
     "vector-beta-feature-fixedheader-description": "Turns the header on the default Vector skin into a fixed header.",
-    "vector-beta-feature-form-refresh-message": "Interface Refresh and Standardization",
+    "vector-beta-feature-form-refresh-message": "Interface refresh and standardization",
     "vector-beta-feature-form-refresh-description": "Use an updated look and feel for basic controls on the site, initially not all controls will be covered. By enabling this you can help give feedback on the new look as well as identify places where things aren't looking quite right.",
     "vector-beta-compact-personal-bar-privacy": "Privacy"
 }
