--- a/i18n/en.json
+++ b/i18n/en.json
@@ -10,6 +10,6 @@
     "vector-beta-feature-fixedheader-message": "Fixed header",
     "vector-beta-feature-fixedheader-description": "Turns the header on the default Vector skin into a fixed header.",
     "vector-beta-feature-form-refresh-message": "Interface refresh and standardization",
-    "vector-beta-feature-form-refresh-description": "Use an updated look and feel for basic controls on the site, initially not all controls will be covered. By enabling this you can help give feedback on the new look as well as identify places where things aren't looking quite right.",
+    "vector-beta-feature-form-refresh-description": "Use an updated look and feel for basic controls on the site. Controls will be covered gradually. By enabling this you can help give feedback on the new look as well as identify places where things aren't looking quite right.",
     "vector-beta-compact-personal-bar-privacy": "Privacy"
 }
